@@ -109,7 +109,6 @@
                         <string>my_comment</string>
                         <string>my_multi_list_field</string>
                         <string>my_checkbox</string>
-                        <string>my_text_content</string>
                         <string>my_text_format</string>
                         <string>my_lines_field</string>
                         <string>my_file_field</string>
@@ -123,6 +122,8 @@
                         <string>my_link_field</string>
                         <string>my_multi_check_box_field</string>
                         <string>my_input_button_field</string>
+                        <string>my_text_content</string>
+                        <string>my_editor_field</string>
                       </list>
                     </value>
                 </item>
